2011-07-17  Robert Larice
 * src/frontend/plotting/plotit.c :
   cleanup, `getlims()' has to be used with number arg >= 1
     and get rid of an ancient hack

2011-07-17  Robert Larice
 * src/frontend/arg.c ,
 * src/frontend/com_hardcopy.c :
   cleanup usage of `prompt()'
     and get rid of an ancient hack

2011-07-17  Robert Larice
 * src/frontend/com_fft.c ,
 * src/frontend/inpcom.c :
   cleanup, reduce compiler warnings

2011-07-17  Robert Larice
 * src/misc/hash.c :
   nghash cleanup, use `%p' to print a pointer value

2011-07-17  Robert Larice
 * src/include/hash.h ,
 * src/misc/hash.c :
   nghash cleanup, use stdint.h for proper sized integers representing a pointer

2011-07-17  Robert Larice
 * visualc/include/inttypes.h ,
 * visualc/include/stdint.h :
   add inttypes.h and stdint.h for visualc
     from http://code.google.com/p/msinttypes/

2011-07-17  Robert Larice
 * src/maths/cmaths/cmath2.c :
   cleanup redeclarations for todays tanh commit

2011-07-17  Holger Vogt
 * inp.c: allow comment lines inside of
   command files

2011-07-17  Robert Larice
 * src/include/hash.h ,
 * src/misc/hash.c :
   nghash cleanup

2011-07-17  Holger Vogt
 * cmath1.c, cmath1.h, cmath2.c, cmath2.h, parse.c, fteext.h:
   new complex functions sinh, cosh, tanh
 * evaluate.c: remove redundant call to cmath2.h

2011-07-10  Holger Vogt
 * main.c, ivars.c, /xspice/icm/analog/file_source/cfunc.mod:
   environmental variable NGSPICE_INPUT_DIR
   for additional search directory for input file

2011-07-10  Robert Larice
 * src/winmain.c ,
 * src/frontend/wdisp/winprint.c :
   cleanup integer type conversions

2011-07-10  Robert Larice
 * src/frontend/wdisp/windisp.c :
   SetWindowLongPtr() and SetClassLongPtr() for 64bit compatibility

2011-07-09  Holger Vogt
 * input.c: definition of _read only for Windows console

2011-07-09  Robert Larice
 * src/frontend/gens.c ,
 * src/frontend/subckt.c ,
 * src/frontend/numparam/xpressn.c ,
 * src/maths/sparse/spfactor.c ,