@@ -389,6 +389,10 @@ struct comm spcp_coms[] = {
       { 0, 0, 0, 0 }, E_DEFHMASK, 0, 1,
       NULL,
       "[number] : Iterate number times, or one." } ,
+    { "remcirc", com_remcirc, TRUE, TRUE,
+      { 0, 0, 0, 0 }, E_DEFHMASK, 0, 0,
+      NULL,
+      ": Remove current citcuit." } ,
     { "reset", com_rset, TRUE, TRUE,
       { 0, 0, 0, 0 }, E_DEFHMASK, 0, 0,
       NULL,
