@@ -8,6 +8,6 @@
 
 void com_resume(wordlist *wl);
 void com_rset(wordlist *wl);
-
+void com_remcirc(wordlist *wl);
 
 #endif
